# SkillPointer

./: .gitattributes  .gitignore  AGENTS.md  Install.bat  Install.vbs  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  setup.py  skills-lock.json  test_transformers.ts  test_transformers2.ts  tsconfig.json
.agents/: skills-lock.json
.agents/commands/: test-ui.md
.skill-test/.snapshot/node-api-hardener/: SKILL.md
.skill-test/.snapshot/oauth-token-guardian/: SKILL.md
.skill-test/.snapshot/react-form-optimizer/: SKILL.md
.skill-test/.snapshot/terraform-release-pipeline/: SKILL.md
.skill-test/.snapshot/tui-design-polish/: SKILL.md
.skill-test/skills/playwright-e2e-driver/: SKILL.md
.skill-test/skills/postgres-query-profiler/: SKILL.md
.skill-test/skills/typescript-refactor-guide/: SKILL.md
opentui/: AGENTS.md
opentui/src/: app.tsx  exit-message.ts  index.tsx  routes.ts  theme-registry.ts
opentui/src/core/: browse-data.test.ts  browse-data.ts  categorization.test.ts  categorization.ts  exit-signoff.test.ts  exit-signoff.ts  home-cat-art.test.ts  home-cat-art.ts  init-flow.test.ts  init-flow.ts  init-plan.test.ts  init-plan.ts  (+19 more)
scripts/: aggregate-oracle-results.ts  benchmark-tagger.ts  compare-models.ts  gather-fixtures.keywords.ts  gather-fixtures.ts  generate-candidate-dataset.ts  generate-skeleton.mjs  rebuild-pointers.ts  run-oracle-eval.ts  shadow-eval.ts  test-doc-latency.ts  test-jina.ts  test-latency.ts  test-oracle-batch.ts  test-oracle-eval.ts
skillcat/: AGENTS.md  __init__.py  cli.py  installer.py
(+13 files in other folders)
